[package]
name = "cargo-image"
version = "0.1.0"
authors = ["Diana"]
edition = "2018"
description = "Create qemu bootable OS images"
#
keywords = [
    "no_std",
    "qemu",
    "image",
    "kernel",
]
categories = [
    "no-std",
    "embedded",
    "development-tools",
    "development-tools::cargo-plugins",
]
documentation = "https://docs.rs/cargo_image"
homepage = "https://github.com/DianaNites/cargo-image"
repository = "https://github.com/DianaNites/cargo-image"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
cargo_metadata = "0.6.4"
xmas-elf = "0.6.2"
cargo-toml2 = "1.3.0"
byteorder = "1.2.7"
clap = "2.32.0"

[badges]
maintenance = { status = "as-is" }
