[package]
name = "cargo-image"
version = "0.2.1"
authors = ["Diana"]
edition = "2018"
description = "Create qemu bootable x86_64 OS images"
#
keywords = [
    "x86_64",
    "no_std",
    "qemu",
    "image",
    "kernel",
]
categories = [
    "no-std",
    "embedded",
    "development-tools",
    "development-tools::cargo-plugins",
]
documentation = "https://docs.rs/cargo_image"
homepage = "https://github.com/DianaNites/cargo-image"
repository = "https://github.com/DianaNites/cargo-image"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
cargo_metadata = "0.8.2"
cargo-toml2 = "1.3.2"
clap = "2.33.0"
llvm-tools = "0.1.1"

[badges]
maintenance = { status = "as-is" }
